--- a/static/css/basic.css
+++ b/static/css/basic.css
@@ -1,5 +1,59 @@
-body
-{
-	background-color: #f5f5f5 !important;
-	color: red !important;
-}
+	body
+	{
+		background-color: #f5f5f5 !important;
+		color: #000000 !important;
+		height: 100%;
+		margin: 0;
+	}
+
+	.primary
+     {
+        background-color: #64dd17 !important;
+        color: #000000 !important; 
+        border-radius: 3%;
+     }
+
+     a
+     {
+       color: #000000 !important; 
+     }
+
+     .primary-light
+     {
+       background-color: #9cff57 !important;
+       color: #000000 !important; 
+       border-radius: 3%;
+     }
+
+     .primary-dark
+     {
+       background-color: #1faa00 !important;
+       color: #000000 !important; 
+       border-radius: 3%;
+     }
+
+     .secondary
+     {
+       background-color: #ffb300 !important;
+       color: #000000 !important; 
+       border-radius: 3%;
+     }
+
+     .secondary-light
+     {
+       background-color: #ffe54c !important;
+       color: #000000 !important; 
+       border-radius: 3%;
+     }
+
+     .secondary-dark
+     {
+       background-color: #c68400 !important;
+       color: #000000 !important; 
+       border-radius: 3%;
+     }
+      navbar
+      {
+        border-radius: 1.5%;
+        right: 0px;
+      }
