Lots of homepage stuff
Finished homepage logic. Added a very basic 404 page. Implemented cookie based authentication. Completed homepage input validation. Aligned all input boxes to right. Handled AJAX errors. Added a few SweetAlerts. TODO: Tweak the radio button alignments and change the registration box size and location

--- a/static/css/homepage_css.css
+++ b/static/css/homepage_css.css
@@ -110,3 +110,13 @@
         color: black !important;
 
       }
+
+      input
+      {
+        float: right;
+      }
+
+      label.radio
+      {
+        float:center;
+      }
