Added Flight Form
1. Added a new flight form to add flights 2. Added a sweetalert to booking page that shows an error when no results are found 3. Tweaked the headers of booking page

--- a/static/css/book.css
+++ b/static/css/book.css
@@ -56,7 +56,7 @@ label
 	border-radius: 50px;
 	font-size: 130%;
 	text-align: center;
-	margin: 1%;
+	margin: 2%;
 }
 
 .bkblBoxBus
@@ -65,10 +65,21 @@ label
 	border-color: #ffb300;
 }
 
+.bkblBoxBus:hover
+{
+	box-shadow: 5px 5px gray;
+}
+
+.bkblBoxFlight:hover
+{
+	box-shadow: 5px 5px gray;
+}
+
 .bkblBoxFlight
 {
-	color: #ffe54c!important;
-	border-color: #1faa00;
+	color: #ffb300!important;
+	border-color: #9cff57;
+	font-weight: bold;
 }
 
 body
