added started code

--- a/static/css/book.css
+++ b/static/css/book.css
@@ -20,6 +20,8 @@ header
 .cityInp:focus
 {
 	border-color: #ffb300;
+	background-color: white !important;
+	color: black !important;
 }
 
 #inputDiv
